# sid-edit-ui

./: AGENTS.md  README.md  pyproject.toml
.opencode/: opencode.json
.opencode/agents/: editor.md  sid-format.md  tester.md
docs/: sid_file_format_plus_description.txt
scripts/: demo_settings.py  load_and_save_sid_file.py  load_sid_file.py
src/: main.py
src/sid_edit_ui/: __init__.py  application.py  components.py  config.py  constants.py  layout.py  main.py  page.py  run.py  settings.py  utils.py
src/sid_edit_ui/about/: page.py
src/sid_edit_ui/datafields/: sidfile.py
src/sid_edit_ui/editor/: actions.py  page.py
src/sid_edit_ui/file/: actions.py  handlers.py  page.py
src/sid_edit_ui/repositories/: sid_repository.py
static/: mu.blue.css
tests/: test_flatten_flags.py  test_upload_handling.py
