[project]
name = "sid-edit-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Hutzelmann", email = "lhutzelmann@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "holm>=0.9.0",
    "pydantic>=2.10.6",
    "sid-file-format",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "taskipy>=1.14.1",
]

[project.scripts]
sid_edit_ui = "sid_edit_ui.application:main"

[tool.uv.sources]
sid-file-format = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/sid-file-format",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "org.lhutzelmann"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "SID Edit UI"

# company name to display in about app dialogs
company = "lhutzelmann"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by the public domain"

[tool.flet.app]
path = "src"

[tool.taskipy.tasks]
run = { cmd="uvicorn sid_edit_ui.main:app --reload"}

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
