[project]
name = "sid-edit-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Hutzelmann", email = "lhutzelmann@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "holm>=0.9.0",
    "pydantic>=2.10.6",
    "sid-file-format",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "taskipy>=1.14.1",
]

[project.scripts]
sid_edit_ui = "sid_edit_ui.run:main"
SEI = "sid_edit_ui.run:main"

[tool.uv.sources]
sid-file-format = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/sid-file-format",
]

[tool.taskipy.tasks]
run = { cmd="sid_edit_ui"}
test = { cmd="pytest"}

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
