[project]
name = "sid-edit-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Hutzelmann", email = "lhutzelmann@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "holm>=0.9.0",
    "platformdirs>=4.9.6",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.14.1",
    "sid-file-format",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pyfakefs>=6.2.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.15.1",
    "ruff>=0.11.0",
    "taskipy>=1.14.1",
]

[project.scripts]
sid_edit_ui = "sid_edit_ui.run:main"
SEU = "sid_edit_ui.run:main"

[tool.uv.sources]
sid-file-format = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/sid-file-format",
]

[tool.taskipy.tasks]
run = { cmd="sid_edit_ui"}
test = { cmd="pytest"}
ruff_format = { cmd="ruff format"}
ruff_check = { cmd="ruff check --fix"}
check = { cmd="task test && task ruff_format && task ruff_check"}

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
